[package]
name = "soundcloud-embedder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde_json = "1"
urlencoding = "2"
html-escape = "0.2"
unicode-truncate = "0.2"
regex = "1"
url = "2"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
