[package]
name = "soundcloud-embedder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.10"
log = "0.4"
hyper = { version = "0.14", features = ["full", "deprecated"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "deflate", "brotli"] }
serde_json = "1"
urlencoding = "2"
html-escape = "0.2"
unicode-truncate = "0.2"
regex = "1"
url = "2"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
lazy_static = "1"
hyper-rustls = { git = "https://github.com/rustls/hyper-rustls.git", version = "0.24", features = ["acceptor"] }
rustls = "0.21"
rustls-pemfile = "1"
prometheus = "0.13"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
webm = "1"
vpx-encode = "0.6"
env-libvpx-sys = { version = "5", features = ["generate"] }
opus = "0.3"
ogg = "0.9"
